--- a/03-colors.html
+++ b/03-colors.html
@@ -10,9 +10,16 @@
       border: 1px red dashed;
     }
 
+    html {
+      min-height: 100%;
+    }
+
     body {
+      min-height: 100%;
       padding-top: 40px;
       padding-bottom: 40px;
+      background: linear-gradient(180deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
+      color: white;
     }
 
     .avatar-image {
@@ -28,6 +35,15 @@
       border-radius: 48px;
       object-fit: cover;
     }
+
+    a {
+      color: white;
+    }
+
+    .item {
+      background-color: rgba(149, 123, 173, 0.5);
+    }
+
   </style>
 </head>
 
