Add closing div comments

--- a/00-structure.html
+++ b/00-structure.html
@@ -40,8 +40,8 @@
       <div class="item">
         Etc
       </div>
-    </div>
-  </div>
+    </div> <!-- links-row -->
+  </div> <!-- main-container -->
 </body>
 
 </html>
