--- a/02-size-images.html
+++ b/02-size-images.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  
   <title>Raghu Betina's links</title>
 
   <style>
@@ -115,8 +116,8 @@
           The Last Question — Isaac Asimov
         </a>
       </div>
-    </div>
-  </div>
+    </div> <!-- links-row -->
+  </div> <!-- main-container -->
 </body>
 
 </html>
