--- a/04-layout.html
+++ b/04-layout.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Raghu Betina's links</title>
 
   <style>
@@ -164,8 +166,8 @@
           The Last Question — Isaac Asimov
         </a>
       </div>
-    </div>
-  </div>
+    </div> <!-- links-row -->
+  </div> <!-- main-container -->
 </body>
 
 </html>
