--- a/03-colors.html
+++ b/03-colors.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  
   <title>Raghu Betina's links</title>
 
   <style>
@@ -131,8 +132,8 @@
           The Last Question — Isaac Asimov
         </a>
       </div>
-    </div>
-  </div>
+    </div> <!-- links-row -->
+  </div> <!-- main-container -->
 </body>
 
 </html>
