--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Raghu Betina's frequently shared links">
 
   <title>Raghu Betina's links</title>
-  <meta name="description" content="Raghu Betina's frequently shared links">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -76,12 +76,11 @@
       display: flex;
       align-items: center;
       margin-bottom: 20px;
-      backdrop-filter: blur(10px);
       background-color: rgba(149, 123, 173, 0.5);
     }
 
     .link-text {
-      flex: 1;
+      flex-grow: 1;
       text-align: center;
     }
   </style>
