--- a/05-layout.html
+++ b/05-layout.html
@@ -21,7 +21,7 @@
       padding-top: 40px;
       padding-bottom: 40px;
       background: linear-gradient(180deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
-      color: white;
+      color: rgba(255, 255, 255, 1.0);
     }
 
     .avatar-image {
@@ -39,7 +39,7 @@
     }
 
     a {
-      color: white;
+      color: rgba(255, 255, 255, 1.0);
     }
 
     .item {
