--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
@@ -24,8 +24,8 @@
       margin: 0;
       color: white;
       padding: 40px 20px;
-      background: linear-gradient(180deg, #1f005c, #43005a, #5d0056, #710052, #83004e, #911949, #9d2c46, #a73e43, #ae5042, #b46243, #b87347, #bb844e);
-      font-family: "Source Sans Pro", Sans-Serif;
+      background: linear-gradient(180deg, #1f005c, #5b0060, #870160, #ac255e, #ca485c, #e16b5c, #f39060, #ffb56b);
+      font-family: "Raleway", sans-serif;
     }
 
     a {
@@ -46,8 +46,9 @@
     .name-row {
       text-align: center;
       margin-bottom: 30px;
-      font-family: "Playfair Display", Serif;
+      font-family: "Playfair Display", serif;
       font-size: 24px;
+      font-weight: 900;
     }
 
     .social-icons-row {
