--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta name="description" content="Raghu Betina's frequently shared links">
+
   <title>Raghu Betina's links</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
   <style>
     html {
@@ -92,7 +95,7 @@
 <body>
   <div class="main-container">
     <div class="image-row">
-      <img src="/thumbnails/profile-pic.jpg" alt="Raghu Betina headshot" class="avatar-image">
+      <img src="profile-pic.jpg" alt="Raghu Betina headshot" class="avatar-image">
     </div>
 
     <div class="name-row">
@@ -101,19 +104,19 @@
 
     <div class="social-icons-row">
       <a href="https://github.com/raghubetina" target="_blank">
-        GitHub
+        <i class="fa-brands fa-github"></i>
       </a>
 
       <a href="https://www.linkedin.com/in/raghubetina/" target="_blank">
-        LinkedIn
+        <i class="fa-brands fa-linkedin"></i>
       </a>
 
       <a href="https://www.instagram.com/raghubetina/" target="_blank">
-        Instagram
+        <i class="fa-brands fa-instagram"></i>
       </a>
 
       <a href="https://twitter.com/raghubetina" target="_blank">
-        Twitter
+        <i class="fa-brands fa-twitter"></i>
       </a>
     </div>
 
