--- a/07-final-touches.html
+++ b/07-final-touches.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
+
   <style>
     html {
       min-height: 100%;
@@ -101,19 +103,19 @@
 
     <div class="social-icons-row">
       <a href="https://github.com/raghubetina" target="_blank">
-        GitHub
+        <i class="fa-brands fa-github"></i>
       </a>
 
       <a href="https://www.linkedin.com/in/raghubetina/" target="_blank">
-        LinkedIn
+        <i class="fa-brands fa-linkedin"></i>
       </a>
 
       <a href="https://www.instagram.com/raghubetina/" target="_blank">
-        Instagram
+        <i class="fa-brands fa-instagram"></i>
       </a>
 
       <a href="https://twitter.com/raghubetina" target="_blank">
-        Twitter
+        <i class="fa-brands fa-twitter"></i>
       </a>
     </div>
 
