--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Raghu Betina's frequently shared links">
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffb56b">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffb56b">
+
   <title>Raghu Betina's links</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
 
@@ -51,7 +61,7 @@
       background-color: rgba(149, 123, 173, 0.5);
       border-radius: 200px;
       padding: 5px;
-      box-shadow: 2px 2px 10px 0px rgba(122,32,122,0.25);
+      box-shadow: 2px 2px 10px 0px rgba(122, 32, 122, 0.25);
     }
 
     .main-container {
