--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <img src="/thumbnails/rome.jpg" class="thumbnail">
 
         <a class="link-text" target="_blank" href="https://www.exurbe.com/the-shape-of-rome/">
-          The Shape of Rome — exurbe
+          The Shape of Rome — Ada Palmer
         </a>
       </div>
 
