--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffb56b">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffb56b">
+  <meta name="theme-color" content="#1f005c">
 
   <title>Raghu Betina's links</title>
 
