Add padding-right to truly center link text

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     .item {
       background-color: rgba(149, 123, 173, 0.5);
       border-radius: 200px;
-      padding: 5px;
+      padding: 5px 53px 5px 5px;
       box-shadow: 2px 2px 10px 0px rgba(122, 32, 122, 0.25);
     }
 
