--- a/07-final-touches.html
+++ b/07-final-touches.html
@@ -50,6 +50,7 @@
       background-color: rgba(149, 123, 173, 0.5);
       border-radius: 200px;
       padding: 5px;
+      padding-right: 53px;
       box-shadow: 2px 2px 10px 0px rgba(122,32,122,0.25);
     }
 
