--- a/07-final-touches.html
+++ b/07-final-touches.html
@@ -14,6 +14,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
 
   <style>
+    /*
+    * {
+      border: 1px red dashed;
+    }
+    */
+
     html {
       min-height: 100%;
     }
